# multimaterial-voxelization

./: .gitignore  Cargo.toml  LICENSE  README.md  out.txt
assets/: test.blend  test.blend1  test2.blend  test2.blend1  test_coarse.blend  test_coarse.blend1  test_slice.blend
src/: lib.rs  main.rs  material_mesh.rs  plc.rs  tetrahedralize.rs  triangulate.rs  util.rs  voxels.rs
