[package]
name = "voxelization"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tri-mesh = { git = "https://github.com/josh65536/tri-mesh" }
fnv = "1.0.7"
cgmath = "0.17.0"
float-ord = "0.2.0"
rayon = "1.5.0"
petgraph = "0.5.1"
stable-vec = "0.4.0"
combination = "0.1.2"
bvh = "0.3.2"